--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "request": "^2.88.0"
