--- a/react-client/my-app/package.json
+++ b/react-client/my-app/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "create-react-app": "^2.0.3",
     "axios": "^0.18.0",
+    "create-react-app": "^2.0.3",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
